--- a/src/index.njk
+++ b/src/index.njk
@@ -19,11 +19,11 @@ permalink: "index.html"
 			<div class="container" style="padding: 0 0;">
                 <div class="row my-6 align-items-center">
                     <div class="col-lg-5 my-4">
-                        <h1 class="text-titles" style="font-size: 60px!important;line-height: 60px;">Laboratorio de Municipalidades </h1>
-                        <p class="my-4" style="font-size: 25px!important;">Tiene como objetivo central facilitar la colaboración y la integración de datos entre entidades públicas y privadas en Guatemala. <br>
-                            
+                        <h1 class="text-titles" style="font-size: 60px!important;line-height: 60px;">Laboratorio Municipal</h1>
+                        <p class="my-4" style="font-size: 25px!important;">
+                            Innovación y Desarrollo Económico Local para un Futuro Digital<br>
                         </p>
-                        <a class="btn" href="#">Aplica a Lab</a>
+                        <a class="btn" href="#">Convocatoria para el Programa de Asistencia Técnica 2025</a>
                     </div>
                     <div class="col-lg-7 my-4">
                         <img style="width: 120%;" src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
@@ -32,6 +32,17 @@ permalink: "index.html"
 			</div>
         </section>
 
+        <!-- Cintillo destacado
+        ============================================= -->
+        <section class="px-2" style="background-color: #fff;">
+            <div class="container clearfix ">
+                <div class="row py-6 justify-content-center">
+                    <div class="col-lg-8 my-4 text-center">
+                        <h1 style="font-size: 40px;">Se parte de nuestro Programa de Asistencia Técnica 2025</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Lineas de Accion
         ============================================= -->
@@ -39,12 +50,15 @@ permalink: "index.html"
         <section class="px-2" style="background-color: #03324e;">
             <div class="container clearfix ">
                 <div class="row py-6">
+                    <div class="col-lg-12 text-center mb-4">
+                        <h1 class="text-titles2-5">Componentes</h1>
+                    </div>
                     <div class="col-lg-4 my-4 text-center">
                         <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
                             <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-19.png" style="width: 120px; height: 120px; margin: auto;">
                             <h1 class="text-titles">Programa de Formación</h1>
                             <p class="mt-4">
-                                Capacitación a funcionarios públicos y representantes de entidades privadas en mejores prácticas y tecnologías de interoperabilidad.
+                                Capacitación y desarrollo de capacidades en gestión digital municipal
                             </p>
                         </div>
                     </div>
@@ -54,7 +68,7 @@ permalink: "index.html"
                             <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-20.png" style="width: 120px; height: 120px; margin: auto;">
                             <h3 class="text-titles">Mediciones y Evaluación</h3>
                             <p class="mt-4">
-                                Implementación de indicadores y métricas para evaluar el impacto de la interoperabilidad en la eficiencia administrativa y la satisfacción ciudadana.
+                                Diagnósticos y seguimiento del desempeño de las municipalidades
                             </p>
                         </div>
                     </div>
@@ -64,7 +78,7 @@ permalink: "index.html"
                             <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-21.png" style="width: 120px; height: 120px; margin: auto;"> 
                             <h3 class="text-titles">Centro de Asistencia Técnica</h3>
                             <p class="mt-4">
-                                Provisión de soporte técnico continuo a las entidades participantes para la implementación y mantenimiento de soluciones de interoperabilidad.
+                                Herramientas digitales y metodologías innovadoras para la transformación digital
                             </p>
                         </div>
                     </div>
@@ -82,7 +96,7 @@ permalink: "index.html"
                     <div class="col-lg-6 my-4">
                         <h1 class="text-titles">¿Qué es el Laboratorio Municipal?</h1>
                         <p class="mt-4">
-                            <b>Laboratorio Municipal</b> se enfoca en modernizar la gestión pública en los municipios de Guatemala, promoviendo el fortalecimiento de servicios públicos, la transparencia y la innovación. Su propósito es establecer un modelo colaborativo en las municipalidades, que les permita implementar prácticas de gobierno abierto, digitalización de procesos y participación ciudadana. 
+                            El <b>Laboratorio Municipal</b> laboratorio Municipal de Red Ciudadana busca fortalecer las capacidades técnicas y tecnológicas de las municipalidades para fomentar la gestión local innovadora y sostenible, mediante proyectos de alto impacto comunitario y la promoción de alianzas estratégicas entre sectores clave.
                         </p>
                         <!-- <p class="mt-4">
                             <strong>
@@ -106,7 +120,7 @@ permalink: "index.html"
             <div class="container clearfix ">
                 <div class="row pt-5 justify-content-center">
                     <div class="col-lg-12 text-center">
-                        <h1 class="text-titles">Explora los Detalles de Cada Municipio</h1>
+                        <h1 class="text-titles">Explora los Detalles de Cada Municipio - DataMunicipal</h1>
                         <p class="mt-4">Accede a un perfil completo de cada uno de los 340 municipios de Guatemala. En esta sección, encontrarás información esencial organizada en categorías clave como salud, educación, transparencia, pobreza, y más. </p>
                     </div>
                     <div class="col-lg-12 my-4">
@@ -139,7 +153,7 @@ permalink: "index.html"
             </div>
         </section>
 
-        <!-- Que es
+        <!-- Apoyo
         ============================================= -->
 
         <section class="px-2" style="background-color: #fff;">
