--- a/src/404.njk
+++ b/src/404.njk
@@ -21,7 +21,7 @@ permalink: "404.html"
                         <h1 class="ud-hero-title">Oops!</h1>
                         <br>
                         <p class="ud-hero-desc">La página que buscas no se encuentra disponible. <br> Revisa el URL o vuelve a la pagina de inicio.</p>
-                        <a class="ud-main-btn" href="/index.html">Regresar al Inicio</a>
+                        <a class="btn" href="/index.html">Regresar al Inicio</a>
                     </div>
                 </div>
             </div>
