cambio de textos y menu

--- a/src/index.njk
+++ b/src/index.njk
@@ -76,7 +76,7 @@ permalink: "index.html"
                     <div class="col-lg-4 my-4 text-center">
                         <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
                             <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-21.png" style="width: 120px; height: 120px; margin: auto;"> 
-                            <h3 class="text-titles">Centro de Asistencia Técnica</h3>
+                            <h3 class="text-titles">Asistencia Técnica</h3>
                             <p class="mt-4">
                                 Herramientas digitales y metodologías innovadoras para la transformación digital
                             </p>
