--- a/src/base2.njk
+++ b/src/base2.njk
@@ -70,10 +70,23 @@
 
 							<ul class="menu-container" style="border:none!important">
 								<li class="menu-item "><a class="menu-link" href="/index.html"><div>Inicio</div></a></li>
-								<li class="menu-item "><a class="menu-link" href="/municipios/index.html"><div>Municipios</div></a></li>
+								<li class="menu-item "><a class="menu-link" href="/acerca/index.html"><div>Acerca de</div></a></li>
+								<li class="menu-item">
+									<a class="menu-link" href="#"><div>Proyectos</div></a>
+									<!-- Submenú -->
+									<ul class="sub-menu-container">
+										<li class="menu-item">
+											<a class="menu-link" href="/programaat2025/index.html"><div>Programa de Asistencia Técnica 2025</div></a>
+										</li>
+										<li class="menu-item">
+											<a class="menu-link" href="/municipios/index.html"><div>DataMunicipal</div></a>
+										</li>
+									</ul>
+								</li>
+								<li class="menu-item "><a class="menu-link" href="/mediciones/index.html"><div>Mediciones</div></a></li>
 								<li class="menu-item "><a class="menu-link" href="/mapa/index.html"><div>Mapa Municipal</div></a></li>
 								<li class="menu-item "><a class="menu-link btn" style="padding: 5px 10px!important;" href="/contacto/index.html"><div>Contacto</div></a></li>
-								
+
 								<div class="redes-responsive">
 									<a target="_blank" href="https://www.facebook.com/Redciudadanagt"><i class="fab fa-facebook-f"></i></a>
 									<a target="_blank" href="https://www.tiktok.com/@redxguate"><i class="fa-brands fa-tiktok"></i></a>
