--- a/src/municipios.njk
+++ b/src/municipios.njk
@@ -16,7 +16,7 @@ permalink: "municipios/index.html"
     <div class="container" style="padding: 0 0;">
         <div class="row align-items-center">
             <div class="col-lg-6 my-4">
-                <h1 class="text-titles" style="font-size: 60px!important;line-height: 60px;">Municipios </h1>
+                <h1 class="text-titles" style="font-size: 60px!important;line-height: 60px;">Data Municipal</h1>
                 <h3>Explora, Visualiza y Analiza datos municipales de Guatemala</h3>
                 <div class="my-4">
                     <input type="text" id="municipioSearch" placeholder="Buscar municipio..." class="form-control">
