--- a/src/base2.njk
+++ b/src/base2.njk
@@ -76,7 +76,7 @@
 									<!-- Submenú -->
 									<ul class="sub-menu-container">
 										<li class="menu-item">
-											<a class="menu-link" href="/programaat2025/index.html"><div>Programa de Asistencia Técnica 2025</div></a>
+											<a class="menu-link" href="/programa2025/index.html"><div>Programa de Asistencia Técnica 2025</div></a>
 										</li>
 										<li class="menu-item">
 											<a class="menu-link" href="/municipios/index.html"><div>DataMunicipal</div></a>
