--- a/src/acerca.njk
+++ b/src/acerca.njk
@@ -113,48 +113,54 @@ permalink: "acerca/index.html"
         <!-- Metodologia
         ============================================= -->
 
-        <section class="px-2" style="background-color: #fff;">
+        <section class="px-2" style="background-color: #e9f0f8;">
             <div class="container clearfix ">
-                <div class="row align-items-center my-4">
-                    <div class="col-lg-6 my-4">
-                        <h1 class="text-titles">Metodología de Trabajo</h1>
-                        <p class="mt-4">
-                            <b style="font-size: 15px;">1. Convocatoria y Diagnóstico Municipal:</b>
+                <div class="row align-items-center align-items-stretch pb-5">
+                    <div class="col-lg-12 text-center my-4 ">
+                        <h1 class="text-titles mt-5">Metodología de Trabajo</h1>
+                    </div>
+                    <div class="col-lg-3 my-4 text-center">
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <div style="background-color: #03324e; border-radius: 50%; color: #fff; width: 40px; height: 40px; font-size: 30px; top: 20%; margin: auto;">1</div>
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Convocatoria y Diagnóstico Municipal:</h1>
                             <ul style="margin-left: 15px; list-style: disc;">
                                 <li>Identificación de necesidades y áreas de mejora en cada municipalidad.</li>
                                 <li>Selección de municipios participantes con base en criterios estratégicos.</li>
                             </ul>
-                        </p>
-                        <p class="mt-4">
-                            <b style="font-size: 15px;">2. Fortalecimiento de Capacidades:</b>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 my-4 text-center">
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <div style="background-color: #03324e; border-radius: 50%; color: #fff; width: 40px; height: 40px; font-size: 30px; top: 20%; margin: auto;">2</div>
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Fortalecimiento de Capacidades</h1>
                             <ul style="margin-left: 15px; list-style: disc;">
                                 <li>Programa de formación con módulos especializados en digitalización, inteligencia artificial y desarrollo económico local.</li>
                                 <li>Acompañamiento técnico por expertos en cada área.</li>
                             </ul>
-                        </p>
-                        <p class="mt-4">
-                            <b style="font-size: 15px;">3. Generación de Proyectos y Prototipos:</b>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 my-4 text-center">
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <div style="background-color: #03324e; border-radius: 50%; color: #fff; width: 40px; height: 40px; font-size: 30px; top: 20%; margin: auto;">3</div>
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Generación de Proyectos y Prototipos</h1>
                             <ul style="margin-left: 15px; list-style: disc;">
                                 <li>Diseño de soluciones innovadoras y herramientas digitales.</li>
                                 <li>Desarrollo de modelos escalables y replicables en otros municipios.</li>
                             </ul>
-                        </p>
-                        <p class="mt-4">
-                            <b style="font-size: 15px;">4. Monitoreo y Evaluación:</b>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 my-4 text-center">
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <div style="background-color: #03324e; border-radius: 50%; color: #fff; width: 40px; height: 40px; font-size: 30px; top: 20%; margin: auto;">4</div>
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Monitoreo y Evaluación</h1>
                             <ul style="margin-left: 15px; list-style: disc;">
                                 <li>Medición del impacto de las soluciones implementadas.</li>
                                 <li>Ajuste de estrategias y escalabilidad de los proyectos exitosos.</li>
                             </ul>
-                        </p>
-                        <!-- <p class="mt-4">
-                            <strong>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Netus et malesuada fames ac turpis egestas. Gravida cum sociis natoque penatibus et.
-                            </strong>
-                        </p> -->
-                    </div>
-
-                    <div class="col-lg-6 my-4">
-                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png"> 
+                        </div>
                     </div>
 
                 </div>
@@ -218,7 +224,7 @@ permalink: "acerca/index.html"
         <!-- Socios Estratégicos y Alianzas
         ============================================= -->
 
-        <section class="px-2" style="background-color: #fff;">
+        <section class="px-2" style="background-color: #e9f0f8;">
             <div class="container clearfix ">
                 <div class="row py-6">
                     <div class="col-lg-12 text-center mb-4">
