--- a/src/index.njk
+++ b/src/index.njk
@@ -22,26 +22,15 @@ permalink: "index.html"
                         <h1 class="text-titles" style="font-size: 60px!important;line-height: 60px;">Laboratorio Municipal</h1>
                         <p class="my-4" style="font-size: 25px!important;">
                             Innovación y Desarrollo Económico Local para un Futuro Digital<br>
+                            Convocatoria para el Programa de Formación de Asistencia Técnica 2025
                         </p>
-                        <a class="btn" href="#">Convocatoria para el Programa de Asistencia Técnica 2025</a>
+                        <a class="btn" href="#">Aplica Ahora</a>
                     </div>
                     <div class="col-lg-7 my-4">
                         <img style="width: 120%;" src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
                     </div>
                 </div>
 			</div>
-        </section>
-
-        <!-- Cintillo destacado
-        ============================================= -->
-        <section class="px-2" style="background-color: #fff;">
-            <div class="container clearfix ">
-                <div class="row py-6 justify-content-center">
-                    <div class="col-lg-8 my-4 text-center">
-                        <h1 style="font-size: 40px;">Se parte de nuestro Programa de Asistencia Técnica 2025</h1>
-                    </div>
-                </div>
-            </div>
         </section>
 
         <!-- Lineas de Accion
@@ -120,28 +109,31 @@ permalink: "index.html"
             <div class="container clearfix ">
                 <div class="row pt-5 justify-content-center">
                     <div class="col-lg-12 text-center">
-                        <h1 class="text-titles">Explora los Detalles de Cada Municipio - DataMunicipal</h1>
+                        <h1 class="text-titles" style="font-size: 25px;">DataMunicipal</h1>
+                        <h1 class="text-titles">Explora los Detalles de Cada Municipio</h1>
                         <p class="mt-4">Accede a un perfil completo de cada uno de los 340 municipios de Guatemala. En esta sección, encontrarás información esencial organizada en categorías clave como salud, educación, transparencia, pobreza, y más. </p>
                     </div>
                     <div class="col-lg-12 my-4">
                         <div class="row">
 							{% for municipio in collections.municipio | limit(8) %}
                             <div class="col-lg-3 my-2 municipio-item">
-                                <a href="{{municipio.url}}">
-                                    <div class="municipio_box">
-                                        <!-- <img src="/assets/images/placeholder2.png"> -->
-                                        <div class="text">
-                                            <h2><i class="fa-solid fa-circle-dot"></i> Departamento: </h2>
-                                            <p>{{municipio.data.municipio.departamento}}</p>
-                                            <h2><i class="fa-solid fa-circle-dot"></i> Municipio: </h2>
-                                            <p>{{municipio.data.municipio.municipio}}</p>
-                                            <h2><i class="fa-solid fa-circle-dot"></i> Partido: </h2>
-                                            <p>{{ municipio.data.municipio.adjudicaciones.adjudicaciones[0].corporacion_municipal | capitalize}}</p>
-                                            <h2><i class="fa-solid fa-circle-dot"></i> Alcalde: </h2>
-                                            <p>{{ municipio.data.municipio.adjudicaciones.adjudicaciones[0].nombre | capitalize}}</p>
-                                        </div>
+                                <div class="municipio_box">
+                                    <div class="header-box">
+                                        <img src=""><h2>{{municipio.data.municipio.municipio}}</h2>
                                     </div>
-                                </a>
+                                    <!-- <img src="/assets/images/placeholder2.png"> -->
+                                    <div class="text">
+                                        <h2> Departamento</h2>
+                                        <p>{{municipio.data.municipio.departamento}}</p>
+                                        <hr>
+                                        <h2>Partido</h2>
+                                        <p>{{ municipio.data.municipio.adjudicaciones.adjudicaciones[0].corporacion_municipal | capitalize}}</p>
+                                        <hr>
+                                        <h2>Alcalde</h2>
+                                        <p>{{ municipio.data.municipio.adjudicaciones.adjudicaciones[0].nombre | capitalize}}</p>
+                                        <a href="{{municipio.url}}" class="btn">Ver más</a>
+                                    </div>
+                                </div>
                             </div>
                             {% endfor %}
                         </div>
@@ -161,6 +153,22 @@ permalink: "index.html"
                 <div class="row align-items-center">
                     <div class="col-lg-6 my-4 m-auto">
                         <img src="/assets/img/elementos_mejoras/apoyo.png">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Cintillo destacado
+        ============================================= -->
+        <section class="px-2" style="background-color: #e9f0f8;">
+            <div class="container clearfix ">
+                <div class="row py-6 justify-content-center">
+                    <div class="col-lg-6 my-4">
+                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png"> 
+                    </div>
+                    <div class="col-lg-6 my-4">
+                        <h1 style="font-size: 40px;">Se parte de nuestro Programa de Asistencia Técnica 2025</h1>
+                        <a class="btn" href="#">Aplica Ahora</a>
                     </div>
                 </div>
             </div>
