--- a/src/mapa_municipal.njk
+++ b/src/mapa_municipal.njk
@@ -12,7 +12,23 @@ permalink: "mapa/index.html"
 {% endblock %}
 
 {% block content %}
-    <section class="px-2" style="background-color: #e9f0f8;">
+    <!-- Slider
+		============================================= -->
+		<section id="slider" class="slider-element px-2">
+			<div class="container" style="padding: 0 0;">
+        <div class="row my-4 align-items-center justify-content-between">
+          <div class="col-lg-5 my-4">
+              <img style="width: 120%;" src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
+          </div>
+          <div class="col-lg-6 my-4">
+              <h1 class="text-titles mb-4" style="font-size: 40px!important;line-height: 40px;">Mapa Municipal<br> de Guatemala</h1>
+              <p>Para conocer más sobre el municipio visita el perfil <br>presionando el municipio en el mapa</p>
+          </div>
+        </div>
+			</div>
+    </section>
+
+    <section class="px-2" style="background-color: #fff;">
         <div class="container clearfix ">
             <div class="row py-6">
                 <div class="col-lg-12 mb-4">
