--- a/src/programaat2025.njk
+++ b/src/programaat2025.njk
@@ -18,18 +18,77 @@ permalink: "programa2025/index.html"
 		<section id="slider" class="slider-element px-2">
 			<div class="container" style="padding: 0 0;">
                 <div class="row my-6 align-items-center">
-                    <div class="col-lg-5 my-4">
-                        <h1 class="text-titles" style="font-size: 60px!important;line-height: 60px;">Programa de Asistencia Técnica 2025</h1>
-                    </div>
-                    <div class="col-lg-7 my-4">
+                    
+                    <div class="col-lg-6 my-4">
                         <img style="width: 120%;" src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
                     </div>
+                    <div class="col-lg-6 my-4">
+                        <h1 class="text-titles" style="font-size: 40px!important;line-height: 60px;">Programa de Formación de Asistencia Técnica 2025</h1>
+                    </div>
+                    
                 </div>
 			</div>
         </section>
 
         <!-- Que es
         ============================================= -->
+
+        <section class="px-2" style="background-color: #fff;">
+            <div class="container clearfix ">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 my-4">
+                        <h1 class="text-titles">¿Qué es el Programa de Asistencia Técnica 2025?</h1>
+                        <p class="mt-4">
+                            <ul style="margin-left: 15px; list-style: disc;">
+                                <li>Descripción del Programa: Propósito, alcance y cronograma.</li>
+                                <li>Fases del Programa con una línea de tiempo interactiva.</li>
+                                <li>Convocatoria y Requisitos de Aplicación con formulario en línea para postulación.</li>
+                                <li>Casos de Éxito con testimonios de municipalidades participantes.</li>
+                            </ul>
+                        </p>
+                        <!-- <p class="mt-4">
+                            <strong>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Netus et malesuada fames ac turpis egestas. Gravida cum sociis natoque penatibus et.
+                            </strong>
+                        </p> -->
+                    </div>
+
+                    <div class="col-lg-6 my-4">
+                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png"> 
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="px-2" style="background-color: #e9f0f8;">
+            <div class="container clearfix ">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 my-4">
+                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png"> 
+                    </div>
+                    
+                    <div class="col-lg-6 my-4">
+                        <h1 class="text-titles">¿Qué es el Programa de Asistencia Técnica 2025?</h1>
+                        <p class="mt-4">
+                            <ul style="margin-left: 15px; list-style: disc;">
+                                <li>Descripción del Programa: Propósito, alcance y cronograma.</li>
+                                <li>Fases del Programa con una línea de tiempo interactiva.</li>
+                                <li>Convocatoria y Requisitos de Aplicación con formulario en línea para postulación.</li>
+                                <li>Casos de Éxito con testimonios de municipalidades participantes.</li>
+                            </ul>
+                        </p>
+                        <!-- <p class="mt-4">
+                            <strong>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Netus et malesuada fames ac turpis egestas. Gravida cum sociis natoque penatibus et.
+                            </strong>
+                        </p> -->
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
 
         <section class="px-2" style="background-color: #fff;">
             <div class="container clearfix ">
