--- a/src/acerca.njk
+++ b/src/acerca.njk
@@ -17,12 +17,12 @@ permalink: "acerca/index.html"
 		============================================= -->
 		<section id="slider" class="slider-element px-2">
 			<div class="container" style="padding: 0 0;">
-                <div class="row my-6 align-items-center">
-                    <div class="col-lg-5 my-4">
-                        <h1 class="text-titles" style="font-size: 60px!important;line-height: 60px;">Acerca de</h1>
+                <div class="row my-6 align-items-center justify-content-between">
+                    <div class="col-lg-6 my-4">
+                        <h1 class="text-titles" style="font-size: 40px!important;line-height: 60px;">Laboratorio Municipal</h1>
                     </div>
-                    <div class="col-lg-7 my-4">
-                        <img style="width: 120%;" src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
+                    <div class="col-lg-5 my-4">
+                        <img style="width: 120%;" src="/assets/images/new_images/16.png">
                     </div>
                 </div>
 			</div>
@@ -34,6 +34,16 @@ permalink: "acerca/index.html"
             <div class="container clearfix ">
                 <div class="row py-6 justify-content-center">
                     <div class="col-lg-5 my-4 text-center">
+                        <img src="/assets/images/new_images/01.png" style="margin: auto; width: 100px; height: auto;">
+                        <h1 style="font-size: 40px;">Visión</h1>
+                        <p>
+                            Ser el referente nacional en innovación municipal, impulsando gobiernos locales 
+                            modernos, eficientes y transparentes, que integren tecnología y datos abiertos 
+                            en su gestión, promoviendo el crecimiento económico y la mejora en la calidad de vida de sus ciudadanos.
+                        </p>
+                    </div>
+                    <div class="col-lg-5 my-4 text-center">
+                        <img src="/assets/images/new_images/02.png" style="margin: auto; width: 100px; height: auto;">
                         <h1 style="font-size: 40px;">Misión</h1>
                         <p>
                             El <b>Laboratorio Municipal de Innovación y Desarrollo Económico Local</b> es una 
@@ -42,14 +52,6 @@ permalink: "acerca/index.html"
                             digital, la eficiencia administrativa y el desarrollo económico local mediante 
                             herramientas tecnológicas, capacitación y asistencia técnica, asegurando un 
                             impacto sostenible en las comunidades.
-                        </p>
-                    </div>
-                    <div class="col-lg-5 my-4 text-center">
-                        <h1 style="font-size: 40px;">Visión</h1>
-                        <p>
-                            Ser el referente nacional en innovación municipal, impulsando gobiernos locales 
-                            modernos, eficientes y transparentes, que integren tecnología y datos abiertos 
-                            en su gestión, promoviendo el crecimiento económico y la mejora en la calidad de vida de sus ciudadanos.
                         </p>
                     </div>
                 </div>
@@ -67,9 +69,9 @@ permalink: "acerca/index.html"
                         <p class="text-white">El Laboratorio Municipal trabaja a través de un enfoque integral que combina:</p>
                     </div>
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-19.png" style="width: 120px; height: 120px; margin: auto;">
-                            <h1 class="text-titles">Diagnóstico y análisis</h1>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/03.png" style="width: 120px; height: 120px; margin: auto;">
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Diagnóstico y análisis</h1>
                             <p class="mt-4">
                                 Identificamos áreas de mejora en las municipalidades mediante estudios técnicos y recopilación de datos.
                             </p>
@@ -77,9 +79,9 @@ permalink: "acerca/index.html"
                     </div>
 
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-20.png" style="width: 120px; height: 120px; margin: auto;">
-                            <h3 class="text-titles">Capacitación y formación</h3>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/04.png" style="width: 120px; height: 120px; margin: auto;">
+                            <h3 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Capacitación y formación</h3>
                             <p class="mt-4">
                                 Desarrollamos programas de formación en transformación digital, inteligencia artificial, planificación estratégica y gestión pública eficiente.
                             </p>
@@ -87,9 +89,9 @@ permalink: "acerca/index.html"
                     </div>
 
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-21.png" style="width: 120px; height: 120px; margin: auto;"> 
-                            <h3 class="text-titles">Innovación y tecnología</h3>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/05.png" style="width: 120px; height: 120px; margin: auto;"> 
+                            <h3 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Innovación y tecnología</h3>
                             <p class="mt-4">
                                 Diseñamos e implementamos herramientas digitales para modernizar procesos y mejorar la prestación de servicios municipales.
                             </p>
@@ -97,9 +99,9 @@ permalink: "acerca/index.html"
                     </div>
 
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <img src="/assets/img/elementos_mejoras/INTEROPERABILDIAD_GD-21.png" style="width: 120px; height: 120px; margin: auto;"> 
-                            <h3 class="text-titles">Monitoreo y evaluación</h3>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/06.png" style="width: 120px; height: 120px; margin: auto;"> 
+                            <h3 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Monitoreo y evaluación</h3>
                             <p class="mt-4">
                                 Acompañamos a las municipalidades en la implementación de soluciones y medimos su impacto en el desarrollo local.
                             </p>
@@ -182,8 +184,9 @@ permalink: "acerca/index.html"
                         </p>
                     </div>
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <h1 class="text-titles">Municipalidades y Mancomunidades</h1>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/07.png" style="width: 120px; height: 120px; margin: auto;"> 
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Municipalidades y Mancomunidades</h1>
                             <p class="mt-4">
                                 Participan activamente en la implementación de proyectos.
                             </p>
@@ -191,8 +194,9 @@ permalink: "acerca/index.html"
                     </div>
 
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <h3 class="text-titles">Universidades y Centros de Investigación</h3>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/08.png" style="width: 120px; height: 120px; margin: auto;"> 
+                            <h3 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Universidades y Centros de Investigación</h3>
                             <p class="mt-4">
                                 Aportan conocimiento y formación especializada.
                             </p>
@@ -200,8 +204,9 @@ permalink: "acerca/index.html"
                     </div>
 
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <h3 class="text-titles">Sector Privado y Organismos de Cooperación</h3>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/09.png" style="width: 120px; height: 120px; margin: auto;"> 
+                            <h3 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Sector Privado y Organismos de Cooperación</h3>
                             <p class="mt-4">
                                 Brindan financiamiento, herramientas y asistencia técnica.
                             </p>
@@ -209,8 +214,9 @@ permalink: "acerca/index.html"
                     </div>
 
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <h3 class="text-titles">Red Ciudadana y Propuestas para la Innovación</h3>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/10.png" style="width: 120px; height: 120px; margin: auto;"> 
+                            <h3 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Red Ciudadana y Propuestas para la Innovación</h3>
                             <p class="mt-4">
                                 Organizaciones líderes en el impulso de la transformación digital en Guatemala.
                             </p>
@@ -231,8 +237,9 @@ permalink: "acerca/index.html"
                         <h1 class="text-titles3-5">Impacto y Beneficiarios</h1>
                     </div>
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <h1 class="text-titles">Municipalidades</h1>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/07.png" style="width: 120px; height: 120px; margin: auto;">
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Municipalidades</h1>
                             <p class="mt-4">
                                 Fortalecen su capacidad de gestión con herramientas innovadoras.
                             </p>
@@ -240,8 +247,9 @@ permalink: "acerca/index.html"
                     </div>
 
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <h3 class="text-titles">Funcionarios Públicos</h3>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/11.png" style="width: 120px; height: 120px; margin: auto;">
+                            <h3 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Funcionarios Públicos</h3>
                             <p class="mt-4">
                                 Adquieren conocimientos en transformación digital y desarrollo económico.
                             </p>
@@ -249,8 +257,9 @@ permalink: "acerca/index.html"
                     </div>
 
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <h3 class="text-titles">Ciudadanos</h3>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/12.png" style="width: 120px; height: 120px; margin: auto;">
+                            <h3 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Ciudadanos</h3>
                             <p class="mt-4">
                                 Se benefician con servicios municipales más eficientes y accesibles.
                             </p>
@@ -258,8 +267,9 @@ permalink: "acerca/index.html"
                     </div>
 
                     <div class="col-lg-3 my-4 text-center">
-                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
-                            <h3 class="text-titles">Empresas y Emprendedores</h3>
+                        <div class="bg-white-green h-100 px-2 py-5" style="border-radius: 10px;">
+                            <img src="/assets/images/new_images/13.png" style="width: 120px; height: 120px; margin: auto;">
+                            <h3 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Empresas y Emprendedores</h3>
                             <p class="mt-4">
                                 Encuentran mejores condiciones para invertir y generar empleo local.
                             </p>
