--- a/src/index.njk
+++ b/src/index.njk
@@ -95,7 +95,7 @@ permalink: "index.html"
                     </div>
 
                     <div class="col-lg-6 my-4">
-                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png"> 
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/gU6sa65YEeM?si=Kd2RuXbMQhuQuXWi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
 
                 </div>
@@ -119,7 +119,7 @@ permalink: "index.html"
                             <div class="col-lg-3 my-2 municipio-item">
                                 <div class="municipio_box">
                                     <div class="header-box">
-                                        <img src=""><h2>{{municipio.data.municipio.municipio}}</h2>
+                                        <img src="/assets/images/new_images/19.png"><h2>{{municipio.data.municipio.municipio}}</h2>
                                     </div>
                                     <!-- <img src="/assets/images/placeholder2.png"> -->
                                     <div class="text">
@@ -162,13 +162,13 @@ permalink: "index.html"
         ============================================= -->
         <section class="px-2" style="background-color: #e9f0f8;">
             <div class="container clearfix ">
-                <div class="row py-6 justify-content-center">
-                    <div class="col-lg-6 my-4">
-                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png"> 
+                <div class="row py-6 justify-content-between">
+                    <div class="col-lg-5 my-4">
+                        <img src="/assets/images/new_images/15.png"> 
                     </div>
-                    <div class="col-lg-6 my-4">
+                    <div class="col-lg-6 my-4 justify-content-center d-flex" style="flex-direction: column;">
                         <h1 style="font-size: 40px;">Se parte de nuestro Programa de Asistencia Técnica 2025</h1>
-                        <a class="btn" href="#">Aplica Ahora</a>
+                        <a class="btn" href="#" style="width: fit-content;">Aplica Ahora</a>
                     </div>
                 </div>
             </div>
