--- a/src/mapa_municipal.njk
+++ b/src/mapa_municipal.njk
@@ -18,11 +18,11 @@ permalink: "mapa/index.html"
 			<div class="container" style="padding: 0 0;">
         <div class="row my-4 align-items-center justify-content-between">
           <div class="col-lg-5 my-4">
-              <img style="width: 120%;" src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
+              <img style="width: 60%;" src="/assets/images/new_images/18.png">
           </div>
-          <div class="col-lg-6 my-4">
-              <h1 class="text-titles mb-4" style="font-size: 40px!important;line-height: 40px;">Mapa Municipal<br> de Guatemala</h1>
-              <p>Para conocer más sobre el municipio visita el perfil <br>presionando el municipio en el mapa</p>
+          <div class="col-lg-7 my-4">
+              <h1 class="text-titles mb-4" style="font-size: 40px!important;line-height: 40px;">Mapa Municipal de Guatemala</h1>
+              <p>Para conocer más sobre el municipio visita el perfil presionando el municipio en el mapa</p>
           </div>
         </div>
 			</div>
