--- a/src/municipios.njk
+++ b/src/municipios.njk
@@ -23,7 +23,7 @@ permalink: "municipios/index.html"
                 </div>
             </div>
             <div class="col-lg-6 my-4">
-                <img style="width: 50%; margin: auto;" src="/assets/img/interoperabilidad/SLIDER 02.png">
+                <img style="width: 50%; margin: auto;" src="/assets/images/new_images/17.png">
             </div>
         </div>
     </div>
@@ -74,7 +74,7 @@ permalink: "municipios/index.html"
                  data-municipio="{{ municipio.data.municipio.municipio | lower }}">
                 <div class="municipio_box">
                     <div class="header-box">
-                        <img src=""><h2>{{municipio.data.municipio.municipio}}</h2>
+                        <img src="/assets/images/new_images/19.png"><h2>{{municipio.data.municipio.municipio}}</h2>
                     </div>
                     <!-- <img src="/assets/images/placeholder2.png"> -->
                     <div class="text">
