--- a/src/programaat2025.njk
+++ b/src/programaat2025.njk
@@ -20,7 +20,7 @@ permalink: "programa2025/index.html"
                 <div class="row my-6 align-items-center">
                     
                     <div class="col-lg-6 my-4">
-                        <img style="width: 120%;" src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
+                        <img style="width: 120%;" src="/assets/images/new_images/15.png">
                     </div>
                     <div class="col-lg-6 my-4">
                         <h1 class="text-titles" style="font-size: 40px!important;line-height: 60px;">Programa de Formación de Asistencia Técnica 2025</h1>
