arreglos de perfil

--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -158,7 +158,7 @@ tags:
                     
                     <ul class="semicircle-menu d-none d-lg-block" style="padding: 10px 0;">
                       <li><a href="#" class="tab-link active" data-target="#general"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-30.png">General</a></li>
-                      <li><a href="#" class="tab-link" data-target="#adjudicacion"><img src="#">Corporación Municipal</a></li>
+                      <li><a href="#" class="tab-link" data-target="#adjudicacion"><img src="/assets/images/new_images/corporacion4.png">Corporación Municipal</a></li>
                       <li><a href="#" class="tab-link" data-target="#gestion-municipal"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/Gestion municipal.png">Gestión Municipal</a></li>
                       <li><a href="#" class="tab-link" data-target="#transparencia"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-32.png">Transparencia</a></li>
                       <li><a href="#" class="tab-link" data-target="#nutricion"><img src="/assets/images/municipio/01_ELEMENTOS LAB/01_ICONOS/LAB MUNICIPAL_01-33.png">Nutrición</a></li>
@@ -274,10 +274,30 @@ tags:
                                         <table class="table table-bordered table-hover">
                                             <thead class="thead-dark">
                                                 <tr>
-                                                    <th>Siglas</th>
-                                                    <th>Corporación Municipal</th>
-                                                    <th>Nombre</th>
-                                                    <th>Puesto</th>
+                                                    <th>
+                                                        <div class="d-flex align-items-center">
+                                                            <img style="width: 25px; height: auto; margin-right: 10px;" src="/assets/images/new_images/corporacion2.png">
+                                                            Siglas
+                                                        </div>
+                                                    </th>
+                                                    <th>
+                                                        <div class="d-flex align-items-center">
+                                                            <img style="width: 25px; height: auto; margin-right: 10px;" src="/assets/images/new_images/corporacion1.png">
+                                                            Corporación Municipal
+                                                        </div>
+                                                    </th>
+                                                    <th>
+                                                        <div class="d-flex align-items-center">
+                                                            <img style="width: 25px; height: auto; margin-right: 10px;" src="/assets/images/new_images/corporacion3.png">
+                                                            Nombre
+                                                        </div>
+                                                    </th>
+                                                    <th>
+                                                        <div class="d-flex align-items-center">
+                                                            <img style="width: 25px; height: auto; margin-right: 10px;" src="/assets/images/new_images/corporacion4.png">
+                                                            Puesto
+                                                        </div>
+                                                    </th>
                                                 </tr>
                                             </thead>
                                             <tbody>
