--- a/src/index.njk
+++ b/src/index.njk
@@ -24,7 +24,7 @@ permalink: "index.html"
                             Innovación y Desarrollo Económico Local para un Futuro Digital<br>
                             Convocatoria para el Programa de Formación de Asistencia Técnica 2025
                         </p>
-                        <a class="btn" href="#">Aplica Ahora</a>
+                        <a class="btn" href="/programa2025/index.html">Aplica Ahora</a>
                     </div>
                     <div class="col-lg-7 my-4">
                         <img style="width: 120%;" src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png">
@@ -168,7 +168,7 @@ permalink: "index.html"
                     </div>
                     <div class="col-lg-6 my-4 justify-content-center d-flex" style="flex-direction: column;">
                         <h1 style="font-size: 40px;">Se parte de nuestro Programa de Asistencia Técnica 2025</h1>
-                        <a class="btn" href="#" style="width: fit-content;">Aplica Ahora</a>
+                        <a class="btn" href="/programa2025/index.html" style="width: fit-content;">Aplica Ahora</a>
                     </div>
                 </div>
             </div>
