--- a/src/programaat2025.njk
+++ b/src/programaat2025.njk
@@ -39,12 +39,9 @@ permalink: "programa2025/index.html"
                     <div class="col-lg-6 my-4">
                         <h1 class="text-titles">¿Qué es el Programa de Asistencia Técnica 2025?</h1>
                         <p class="mt-4">
-                            <ul style="margin-left: 15px; list-style: disc;">
-                                <li>Descripción del Programa: Propósito, alcance y cronograma.</li>
-                                <li>Fases del Programa con una línea de tiempo interactiva.</li>
-                                <li>Convocatoria y Requisitos de Aplicación con formulario en línea para postulación.</li>
-                                <li>Casos de Éxito con testimonios de municipalidades participantes.</li>
-                            </ul>
+                            Fortalecer las capacidades de las municipalidades en transformación digital, 
+                            gestión pública eficiente y desarrollo económico local, a través de asistencia 
+                            técnica, formación especializada y el uso de herramientas tecnológicas innovadoras.
                         </p>
                         <!-- <p class="mt-4">
                             <strong>
@@ -61,68 +58,134 @@ permalink: "programa2025/index.html"
             </div>
         </section>
 
-        <section class="px-2" style="background-color: #e9f0f8;">
+        <section class="px-2" style="background-color: #03324e;">
             <div class="container clearfix ">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 my-4">
-                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png"> 
+                <div class="row py-6 justify-content-center">
+                    <div class="col-lg-12 text-center mb-4">
+                        <h1 class="text-titles2-5">¿Qué ofrecemos?</h1>
                     </div>
-                    
-                    <div class="col-lg-6 my-4">
-                        <h1 class="text-titles">¿Qué es el Programa de Asistencia Técnica 2025?</h1>
-                        <p class="mt-4">
-                            <ul style="margin-left: 15px; list-style: disc;">
-                                <li>Descripción del Programa: Propósito, alcance y cronograma.</li>
-                                <li>Fases del Programa con una línea de tiempo interactiva.</li>
-                                <li>Convocatoria y Requisitos de Aplicación con formulario en línea para postulación.</li>
-                                <li>Casos de Éxito con testimonios de municipalidades participantes.</li>
-                            </ul>
-                        </p>
-                        <!-- <p class="mt-4">
-                            <strong>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Netus et malesuada fames ac turpis egestas. Gravida cum sociis natoque penatibus et.
-                            </strong>
-                        </p> -->
+                    <div class="col-lg-4 my-4 text-center">
+                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
+                            <h1 class="text-titles">✅ Diagnóstico Municipal</h1>
+                            <p class="mt-4">
+                                Análisis integral para identificar oportunidades de mejora en digitalización y desarrollo económico.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 my-4 text-center">
+                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
+                            <h3 class="text-titles">✅ Capacitación Especializada</h3>
+                            <p class="mt-4">
+                                Formación en temas clave como inteligencia artificial, gestión de datos abiertos, innovación pública y financiamiento para proyectos municipales.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 my-4 text-center">
+                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
+                            <h3 class="text-titles">✅ Asesoría Técnica Personalizada</h3>
+                            <p class="mt-4">
+                                Acompañamiento especializado para el diseño e implementación de soluciones adaptadas a cada municipalidad.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 my-4 text-center">
+                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
+                            <h3 class="text-titles">✅ Desarrollo de Herramientas Digitales</h3>
+                            <p class="mt-4">
+                                Implementación de plataformas, dashboards y soluciones tecnológicas para mejorar la eficiencia y la transparencia municipal.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 my-4 text-center">
+                        <div class="bg-white-green h-100 p-5" style="border-radius: 10px;">
+                            <h3 class="text-titles">✅ Red de Innovación Municipal
+                            </h3>
+                            <p class="mt-4">
+                                Conexión con otras municipalidades y expertos en desarrollo local para intercambiar experiencias y mejores prácticas.
+                            </p>
+                        </div>
                     </div>
 
                 </div>
             </div>
         </section>
-
 
         <section class="px-2" style="background-color: #fff;">
             <div class="container clearfix ">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 my-4">
-                        <h1 class="text-titles">¿Qué es el Programa de Asistencia Técnica 2025?</h1>
-                        <p class="mt-4">
+                <div class="row align-items-center align-items-stretch pb-5">
+                    <div class="col-lg-12 text-center my-4 ">
+                        <h1 class="text-titles mt-5">Fases del Programa</h1>
+                        <br>
+                        <p>📅 El Programa de Asistencia Técnica 2025 se desarrollará en cuatro fases estratégicas:</p>
+                    </div>
+                    <div class="col-lg-3 my-4 text-center">
+                        <div class="bg-white-green2 h-100 px-2 py-5" style="border-radius: 10px;">
+                            <div style="background-color: #03324e; border-radius: 50%; color: #fff; width: 40px; height: 40px; font-size: 30px; top: 20%; margin: auto;">1</div>
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Convocatoria y Diagnóstico Municipal:</h1>
                             <ul style="margin-left: 15px; list-style: disc;">
-                                <li>Descripción del Programa: Propósito, alcance y cronograma.</li>
-                                <li>Fases del Programa con una línea de tiempo interactiva.</li>
-                                <li>Convocatoria y Requisitos de Aplicación con formulario en línea para postulación.</li>
-                                <li>Casos de Éxito con testimonios de municipalidades participantes.</li>
+                                <li>Selección de municipalidades participantes.</li>
+                                <li>Evaluación de necesidades en digitalización y desarrollo económico.</li>
                             </ul>
-                        </p>
-                        <!-- <p class="mt-4">
-                            <strong>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Netus et malesuada fames ac turpis egestas. Gravida cum sociis natoque penatibus et.
-                            </strong>
-                        </p> -->
+                        </div>
                     </div>
 
-                    <div class="col-lg-6 my-4">
-                        <img src="/assets/img/elementos_mejoras/LAB MUNICIPAL.png"> 
+                    <div class="col-lg-3 my-4 text-center">
+                        <div class="bg-white-green2 h-100 px-2 py-5" style="border-radius: 10px;">
+                            <div style="background-color: #03324e; border-radius: 50%; color: #fff; width: 40px; height: 40px; font-size: 30px; top: 20%; margin: auto;">2</div>
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Fortalecimiento de Capacidades</h1>
+                            <ul style="margin-left: 15px; list-style: disc;">
+                                <li>Talleres presenciales y virtuales con expertos en innovación municipal.</li>
+                                <li>Asesoría técnica individualizada para cada municipalidad.</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 my-4 text-center">
+                        <div class="bg-white-green2 h-100 px-2 py-5" style="border-radius: 10px;">
+                            <div style="background-color: #03324e; border-radius: 50%; color: #fff; width: 40px; height: 40px; font-size: 30px; top: 20%; margin: auto;">3</div>
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Desarrollo e Implementación de Soluciones</h1>
+                            <ul style="margin-left: 15px; list-style: disc;">
+                                <li>Creación de herramientas digitales y estrategias de modernización.</li>
+                                <li>Pilotaje y pruebas de soluciones tecnológicas en los municipios.</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 my-4 text-center">
+                        <div class="bg-white-green2 h-100 px-2 py-5" style="border-radius: 10px;">
+                            <div style="background-color: #03324e; border-radius: 50%; color: #fff; width: 40px; height: 40px; font-size: 30px; top: 20%; margin: auto;">4</div>
+                            <h1 class="text-titles3" style="line-height: 25px; margin: 10px 0;">Monitoreo, Evaluación y Escalabilidad</h1>
+                            <ul style="margin-left: 15px; list-style: disc;">
+                                <li>Seguimiento de los resultados y medición del impacto.</li>
+                                <li>Ajustes y mejora continua para replicar las mejores prácticas en otras municipalidades.</li>
+                            </ul>
+                        </div>
                     </div>
 
                 </div>
             </div>
         </section>
 
+
         <section class="px-2" style="background-color: #e9f0f8;">
-            <div class="container clearfix">
-                <div class="row ">
-                    <div class="col-lg-12 my-4">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfU4MPldxusLTxY2ZrzhHSXBjuNnpcQdsrkmJEp1fcxpB5HcA/viewform?embedded=true" width="640" height="642" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+            <div class="container clearfix ">
+                <div class="row align-items-center align-items-stretch pb-5">
+                    <div class="col-lg-12 text-center my-4 ">
+                        <h1 class="text-titles mt-5">Postula Tu Municipalidad al Programa</h1>
+                        <br>
+                        <p>
+                            💡 Si tu municipalidad está interesada en modernizar su gestión, adoptar nuevas tecnologías y fortalecer su desarrollo económico, ¡este programa es para ti!
+                            <br><br>
+                            📩 Regístrate ahora y sé parte del cambio.
+                            <br><br>
+                            📅 Fecha límite de aplicación: 28 de febrero de 2025
+                        </p>
+                        <br>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdlSYNYwOvxyHtbMfs3uYNZJvshyvinbO-1L6ZNRL5Ka3GAkw/viewform?embedded=true" width="640" height="913" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                     </div>
                 </div>
             </div>
